--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,10 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
+    <string name ="home">Home</string>
+    <string name ="goTrip">Go on a Trip</string>
+    <string name ="stats">Your info</string>
+    <string name ="profile">Profile</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
